--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Introduzione a VueJS</title>
+    <title>Esercizio introduttivo a vueJS</title>
   </head>
   <body>
 
-    <div id="app">
-
+    <div id="root">
+      <h1>{{welcomeMessage}}</h1>
+      <!-- Attraverso la forma contratta di v-blind assegno la variabile :src ad un tag img -->
+      <img :src="myImage" alt="Immagine della mia moto">
     </div>
 
   <!-- Script vueJS -->
