Centrati titolo e immagine

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div id="root">
       <h1>{{welcomeMessage}}</h1>
-      <!-- Attraverso la forma contratta di v-blind assegno la variabile :src ad un tag img -->
+      <!-- Attraverso la forma contratta di v-blind assegno la variabile :src (Forma contratta di v-bind:src) ad un tag img -->
       <img :src="myImage" alt="Immagine della mia moto">
     </div>
 
